<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="HMIcalP2" Id="{672f6fde-ac02-4614-9ef6-e73b7ba72741}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	Inicio:BOOL;
	PesoMaxConte:REAL;
	Dosis:REAL;
	Tinyeccion:DINT;
	PesoBatch:REAL;
	Tolerancia:REAL;
	Pausa:BOOL;		
	Error:REAL;
	ContLleno:BOOL;	
	CantPesadas:INT;
	PesoCalibracion:REAL;
	Muestra1_Ok:BOOL;
	Finalizado:BOOL;
	PesoPromedio6:REAL;
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>