<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.14">
  <POU Name="Calibracion_Po_calc" Id="{7b335178-e7a5-4c39-a984-17c7504860f5}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK Calibracion_Po_calc
VAR_INPUT
	Dosis:REAL;
	Tinyeccion:DINT;
	PesoBatch:REAL;
	Tolerancia:REAL;
	Pausa:BOOL;
	PesoMaxConte:REAL;
	PesoConte:REAL;
END_VAR
VAR_OUTPUT
	Error:REAL;
	Peso_en_contenedor:REAL;
	PesoCalibra:REAL;
	PesoProm:REAL;
    Muestra2:BOOL;
END_VAR
VAR_IN_OUT
	Inicio:BOOL;
	Coef:REAL;
	Inyectar:BOOL;
	Tarar:BOOL;
	CantPesadas:INT;
	ContLleno:BOOL;
	Finalizado:BOOL;	
END_VAR
VAR

	IniciarCal: R_TRIG;
	Caudal:REAL;
	PesoMax:REAL;
	PesoMin:REAL;
	Calibrando:BOOL;
	IniInyectar:R_TRIG;
	FinInyectar:F_TRIG;
	Inyectando:BOOL;
	PesoIni:REAL;
	Pesada:ARRAY [1..6]OF REAL;
	Muestra1:BOOL;
	PromMuestra:REAL;
	IniCal:BOOL;
	IniIny:BOOL;
	FinIny:BOOL;
	tDemoraFinIny:TON;
	tDemoraFinIny2:TON;
	StepCal:INT;
	bContenedorLleno:F_TRIG;
	borrarContenedorLleno:BOOL;
	CancelarCal:F_TRIG;
	CanCal: BOOL;
	Teste: INT;
	i: INT;
	PromMuestra2: REAL;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[
IniciarCal(CLK:=Inicio , Q=>IniCal );
IF IniCal THEN
	StepCal:=1;
	IniCal:=0;
END_IF
CancelarCal(CLK:=Inicio , Q=>CanCal );

IF CanCal  THEN
	StepCal:=0;
	Pausa:=FALSE;
	CantPesadas:=0;
	Calibrando:=FALSE;
	Muestra1:=FALSE;
	Muestra2:=FALSE;
	CanCal:=0;
END_IF
PesoCalibra:=Dosis*PesoBatch/100;
bContenedorLleno(CLK:=ContLleno ,Q=>borrarContenedorLleno );
IF borrarContenedorLleno THEN
	Peso_en_contenedor:=0;
	Tarar:=TRUE;
	borrarContenedorLleno:=0;
END_IF

CASE StepCal OF
	1: 
		IF Tinyeccion=0 THEN
			Tinyeccion:=1;
		END_IF
		Tarar:=TRUE;
		Caudal:=PesoCalibra/DINT_TO_REAL (Tinyeccion);
		PesoMax:=(PesoCalibra*(1+Tolerancia/100))/1000;
		PesoMin:=(PesoCalibra*(1-Tolerancia/100))/1000;
		Pesada[1]:=0;
		Pesada[2]:=0;
		Pesada[3]:=0;
		Pesada[4]:=0;
		Pesada[5]:=0;
		Pesada[6]:=0;
		Finalizado:=0;
		Peso_en_contenedor:=0;
		CantPesadas:=0;
		Calibrando:=TRUE;
		IniCal:=0;
		StepCal:=2;
		
	2: 	Inyectar:=TRUE;
		Muestra1:=TRUE;
		//Tarar:=FALSE;
		PesoIni:=PesoConte;
		StepCal:=3;
		
	3: 	tDemoraFinIny(IN:=NOT Inyectar,PT:=T#10S);;
		IF tDemoraFinIny.Q THEN
			Tarar:=FALSE;
			StepCal:=4;
		END_IF
		
	4: 	CantPesadas := CantPesadas + 1;	
		Pesada[CantPesadas] := PesoConte - PesoIni;
		Peso_en_contenedor := Peso_en_contenedor + Pesada[CantPesadas];
		StepCal := 5;
		
	5:	IF Peso_en_contenedor > (0.9 * PesoMaxConte) THEN
			ContLleno:=1;
		ELSE
			StepCal:=6;		
		END_IF;
		
	6:		IF CantPesadas<3 THEN
				IF NOT Pausa THEN
					StepCal:=2;
				END_IF
			ELSE
				StepCal:=7;	
			END_IF;
	
	7://Calculo error muestra1
		IF CantPesadas=3 AND Muestra1 AND NOT Muestra2 AND NOT Inyectar THEN
			PromMuestra:=(Pesada[1]+Pesada[2]+Pesada[3])/3;
			IF (PromMuestra<=PesoMax) AND (PromMuestra>=PesoMin) THEN
				Muestra2:=TRUE;
				StepCal:=8;	
			ELSE
				//Coef:=Coef*	(PesoCalibra*0.001)/PromMuestra;
				
				IF PesoCalibra / (PromMuestra * 1000) >= 3 THEN
					Teste := 1;
					Coef := Coef + 0.4;
				ELSIF PesoCalibra / (PromMuestra * 1000) < 3 AND PesoCalibra / (PromMuestra * 1000) >= 2 THEN
					Teste := 2;
					Coef := Coef + 0.03;
				ELSIF PesoCalibra / (PromMuestra * 1000) < 2 AND PesoCalibra / (PromMuestra * 1000) >= 1 THEN
					Teste := 3;
					Coef := Coef + 0.03;
				ELSIF PesoCalibra / (PromMuestra * 1000) < 1 AND PesoCalibra / (PromMuestra * 1000) >= 0.5 THEN
					Teste := 4;
					Coef := Coef - 0.03;
				ELSE
					Coef := Coef - 0.1;
					Teste := 5;
				END_IF
				//Coef:=Coef+((((PesoCalibra*0.001)-PromMuestra)/(PesoCalibra*0.001))/1);
				Muestra1:=FALSE;
				CantPesadas:=0;	
				StepCal:=2;	
			FOR i := 1 TO 6 DO
				Pesada[i] := 0;
			END_FOR		
			END_IF		
		END_IF;
		
	8:	Inyectar:=TRUE;
		PesoIni:=PesoConte;
		StepCal:=9;
		
	9:	tDemoraFinIny2(IN:=NOT Inyectar,PT:=T#10S);;
		IF tDemoraFinIny2.Q THEN
			StepCal:=10;
		END_IF;
		
	10:	CantPesadas:=CantPesadas+1;	
		Pesada[CantPesadas]:=PesoConte-PesoIni;
		Peso_en_contenedor:=Peso_en_contenedor+Pesada[CantPesadas];
		StepCal:=11;
		
	11:	IF Peso_en_contenedor>(0.9*PesoMaxConte) THEN
			ContLleno:=1;
		ELSE
			StepCal:=12;		
		END_IF;
			
	12:		IF CantPesadas<6 THEN
				IF NOT Pausa THEN
					StepCal:=8;
				END_IF	
			ELSE
				StepCal:=13;	
			END_IF;
	
	13:	
			PromMuestra2:=(Pesada[4]+Pesada[5]+Pesada[6])/3;
		IF ((PromMuestra2<PesoMax) AND (PromMuestra2>PesoMin)) THEN
			PesoProm:=((Pesada[1]+Pesada[2]+Pesada[3]+Pesada[4]+Pesada[5]+Pesada[6])/6)*1000;
			Error:=((PesoCalibra-PesoProm)/PesoCalibra)*100;
			Inicio:=FALSE;
			Muestra1:=FALSE;
			Muestra2:=FALSE;
			Calibrando:=FALSE;
			Finalizado:=TRUE;
			Tarar:=0;
			StepCal:=0;	
		ELSE
			//Coef:=Coef+((((PesoCalibra*0.001)-PromMuestra)/(PesoCalibra*0.001))/100);
			//Coef:=Coef*(PesoCalibra*0.001)/PromMuestra;
			IF PesoCalibra / (PromMuestra * 1000) >= 3 THEN
				Coef := Coef + 0.4;
			ELSIF PesoCalibra / (PromMuestra * 1000) < 3 AND PesoCalibra / (PromMuestra * 1000) >= 2 THEN
				Coef := Coef + 0.03;
			ELSIF PesoCalibra / (PromMuestra * 1000) < 2 AND PesoCalibra / (PromMuestra * 1000) >= 1 THEN
				Coef := Coef + 0.03;
			ELSIF PesoCalibra / (PromMuestra * 1000) < 1 AND PesoCalibra / (PromMuestra * 1000) >= 0.5 THEN
				Coef := Coef - 0.03;
			ELSE
				Coef := Coef - 0.1;
			END_IF
			Muestra1:=FALSE;
			Muestra2:=FALSE;
			CantPesadas:=0;
			StepCal:=2;	
			FOR i := 1 TO 6 DO
				Pesada[i] := 0;
			END_FOR
		END_IF;		
		
END_CASE

//Faz a média de valores de acordo com a contagem de pesagens
IF CantPesadas > 0 THEN
	//PromMuestra:=(Pesada[1]+Pesada[2]+Pesada[3]+Pesada[4]+Pesada[5]+Pesada[6])/CantPesadas;
	PromMuestra := 0;
	FOR i := 1 TO CantPesadas DO
		PromMuestra := PromMuestra + (Pesada[i]/CantPesadas);
	END_FOR
END_IF;

//Verifica se o recipiente está cheio
IF Peso_en_contenedor>(0.9*PesoMaxConte) THEN
	ContLleno:=1;
END_IF;
			




]]></ST>
    </Implementation>
    <LineIds Name="Calibracion_Po_calc">
      <LineId Id="511" Count="0" />
      <LineId Id="47" Count="0" />
      <LineId Id="160" Count="1" />
      <LineId Id="163" Count="0" />
      <LineId Id="162" Count="0" />
      <LineId Id="347" Count="0" />
      <LineId Id="349" Count="0" />
      <LineId Id="345" Count="1" />
      <LineId Id="356" Count="0" />
      <LineId Id="407" Count="0" />
      <LineId Id="352" Count="1" />
      <LineId Id="458" Count="0" />
      <LineId Id="351" Count="0" />
      <LineId Id="344" Count="0" />
      <LineId Id="289" Count="0" />
      <LineId Id="248" Count="0" />
      <LineId Id="234" Count="0" />
      <LineId Id="232" Count="0" />
      <LineId Id="262" Count="0" />
      <LineId Id="251" Count="0" />
      <LineId Id="102" Count="0" />
      <LineId Id="249" Count="0" />
      <LineId Id="9" Count="0" />
      <LineId Id="124" Count="0" />
      <LineId Id="180" Count="1" />
      <LineId Id="183" Count="0" />
      <LineId Id="126" Count="1" />
      <LineId Id="129" Count="1" />
      <LineId Id="192" Count="5" />
      <LineId Id="294" Count="0" />
      <LineId Id="236" Count="0" />
      <LineId Id="131" Count="1" />
      <LineId Id="121" Count="0" />
      <LineId Id="145" Count="1" />
      <LineId Id="135" Count="0" />
      <LineId Id="137" Count="0" />
      <LineId Id="175" Count="0" />
      <LineId Id="148" Count="0" />
      <LineId Id="134" Count="0" />
      <LineId Id="147" Count="0" />
      <LineId Id="139" Count="0" />
      <LineId Id="179" Count="0" />
      <LineId Id="138" Count="0" />
      <LineId Id="230" Count="0" />
      <LineId Id="157" Count="0" />
      <LineId Id="516" Count="0" />
      <LineId Id="150" Count="1" />
      <LineId Id="242" Count="0" />
      <LineId Id="268" Count="0" />
      <LineId Id="515" Count="0" />
      <LineId Id="265" Count="0" />
      <LineId Id="245" Count="0" />
      <LineId Id="274" Count="0" />
      <LineId Id="264" Count="0" />
      <LineId Id="247" Count="0" />
      <LineId Id="517" Count="0" />
      <LineId Id="269" Count="1" />
      <LineId Id="290" Count="1" />
      <LineId Id="271" Count="1" />
      <LineId Id="266" Count="1" />
      <LineId Id="164" Count="4" />
      <LineId Id="178" Count="0" />
      <LineId Id="169" Count="0" />
      <LineId Id="187" Count="0" />
      <LineId Id="524" Count="0" />
      <LineId Id="518" Count="0" />
      <LineId Id="548" Count="0" />
      <LineId Id="531" Count="1" />
      <LineId Id="550" Count="0" />
      <LineId Id="533" Count="1" />
      <LineId Id="551" Count="0" />
      <LineId Id="527" Count="1" />
      <LineId Id="552" Count="0" />
      <LineId Id="529" Count="0" />
      <LineId Id="521" Count="0" />
      <LineId Id="523" Count="0" />
      <LineId Id="553" Count="0" />
      <LineId Id="520" Count="0" />
      <LineId Id="354" Count="0" />
      <LineId Id="171" Count="1" />
      <LineId Id="174" Count="0" />
      <LineId Id="630" Count="1" />
      <LineId Id="629" Count="0" />
      <LineId Id="173" Count="0" />
      <LineId Id="156" Count="0" />
      <LineId Id="176" Count="0" />
      <LineId Id="198" Count="0" />
      <LineId Id="201" Count="0" />
      <LineId Id="177" Count="0" />
      <LineId Id="514" Count="0" />
      <LineId Id="202" Count="2" />
      <LineId Id="190" Count="0" />
      <LineId Id="513" Count="0" />
      <LineId Id="206" Count="1" />
      <LineId Id="257" Count="0" />
      <LineId Id="277" Count="0" />
      <LineId Id="512" Count="0" />
      <LineId Id="284" Count="3" />
      <LineId Id="255" Count="0" />
      <LineId Id="288" Count="0" />
      <LineId Id="280" Count="1" />
      <LineId Id="292" Count="1" />
      <LineId Id="282" Count="1" />
      <LineId Id="278" Count="1" />
      <LineId Id="213" Count="2" />
      <LineId Id="239" Count="0" />
      <LineId Id="216" Count="4" />
      <LineId Id="241" Count="0" />
      <LineId Id="295" Count="0" />
      <LineId Id="227" Count="0" />
      <LineId Id="221" Count="1" />
      <LineId Id="355" Count="0" />
      <LineId Id="536" Count="9" />
      <LineId Id="535" Count="0" />
      <LineId Id="223" Count="2" />
      <LineId Id="228" Count="0" />
      <LineId Id="626" Count="2" />
      <LineId Id="226" Count="0" />
      <LineId Id="212" Count="0" />
      <LineId Id="122" Count="0" />
      <LineId Id="566" Count="0" />
      <LineId Id="554" Count="0" />
      <LineId Id="546" Count="0" />
      <LineId Id="530" Count="0" />
      <LineId Id="565" Count="0" />
      <LineId Id="561" Count="2" />
      <LineId Id="547" Count="0" />
      <LineId Id="572" Count="0" />
      <LineId Id="568" Count="1" />
      <LineId Id="556" Count="0" />
      <LineId Id="570" Count="1" />
      <LineId Id="557" Count="3" />
      <LineId Id="555" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>